--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "react-router-dom": "^6.16.0"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
+    "react-router-dom": "^6.16.0",
+    "tailwindcss": "^3.3.3"
   }
 }
