--- a/sociogram/package.json
+++ b/sociogram/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.5.5"
   },
