--- a/sociogram/package.json
+++ b/sociogram/package.json
@@ -10,6 +10,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.1.0",
     "googleapis": "^126.0.1",
+    "link": "^2.1.0",
     "lockdown": "^0.0.8-dev",
     "polyfills": "^2.1.1",
     "react": "^18.2.0",
